# sse-backend

./: .env_template  .gitignore  Cargo.toml  Note.md  README.md  init.sql
src/: main.rs
src/api/: chat.rs  mapping.rs  mod.rs
src/core/: fst_engine.rs  inference.rs  mod.rs
src/infra/: db_external.rs  db_internal.rs  mod.rs  utils.rs
src/models/: context.rs  ontology.rs  schema.rs
