[package]
name = "sse-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# 异步运行时与 Web 框架
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 数据库 (使用 Postgres 存储映射)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "mysql", "uuid", "chrono","rust_decimal","json"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# 核心语义引擎
fst = "0.4.7"
dashmap = "6.1.0"
anyhow = "1.0"
dotenvy = "0.15.7"

chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde-float"] }
petgraph = "0.8.3"
regex = "1.12.2"
